--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
 <div class="log-form">
   <h2>Login to your account</h2>
   <form>
-    <input type="text" title="username" placeholder="username" />
-    <input type="password" title="username" placeholder="password" />
+    <input type="text" id="username" title="username" placeholder="username" required />
+    <input type="password" id="password" title="username" placeholder="password" required />
     <button type="submit" class="btn">Login</button>
     <a class="forgot" href="#">Forgot Username?</a>
   </form>
