--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,17 @@
-<!doctype html>
 <html>
-  <head>
-    <title>This is the title of the webpage!</title>
-  </head>
-  <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
+<head>
+<title>Login Page</title>
+</head>
+   <link rel="stylesheet" href="style.css">
+  <div class="topnav">
+    <a href="index.html">Home</a>
+    <a href="login.html">Login</a>
+  </div>
+<body>
+
+<h1>Home</h1>
+<p> </p>
+ 
+</body>
+
 </html>
