--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,10 +6,10 @@
   </div>
 <div class="log-form">
   <h2>Login to your account</h2>
-  <form>
-    <input type="text" title="username" placeholder="username" />
-    <input type="password" title="username" placeholder="password" />
-    <button type="submit" class="btn">Login</button>
+  <form method="POST" action="" id="loginForm">
+    <input type="text" id="username" title="username" placeholder="username" required />
+    <input type="password" id="password" title="username" placeholder="password" required />
+    <button type="submit" id="submit" class="btn">Login</button>
     <a class="forgot" href="#">Forgot Username?</a>
   </form>
 </div><!--end log form -->
