--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
   <div class="topnav">
     <a href="index.html">Home</a>
     <a href="login.html">Login</a>
+    <a href="register.html">Register</a>
   </div>
 <body>
 
