--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,8 @@
 <html>
-<head>
-<title>Login Page</title>
-</head>
-   <link rel="stylesheet" href="style.css">
+  <head>
+    <title>Home</title>
+  </head>
+  <link rel="stylesheet" href="style.css">
   <div class="topnav">
     <a href="index.html">Home</a>
     <a href="login.html">Login</a>
@@ -10,8 +10,7 @@
   </div>
 <body>
 
-<h1>Home</h1>
-<p> </p>
+  <h1>Home</h1>
  
 </body>
 
