--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html> 
   <head>
     <title>Login</title>
@@ -9,6 +10,7 @@
     <a href="register.html">Register</a>
   </div>
 <div class="log-form">
+  <div id='exist'></div>
   <h2>Login Form</h2>
   <form method="POST" action="login.php">
     <label for="username">Username:</label> 
@@ -17,5 +19,14 @@
     <input type="password" id="password" name="password" required />
     <input name="login" type="submit" value="Login" />
   </form>
+  <script>
+      const url = new URLSearchParams(window.location.search);
+      const message = url.get('message');
+      if(message === 'InvalidCredentials'){
+        var msg = document.getElementById('exist');
+        msg.innerHTML = "Invalid Credentials! Try again!";
+        msg.style.color = "red";
+      }
+    </script>
 </div><!--end log form -->
 </html>
