Added Search bar, removed redundant items on nav bar
Added Search bar, removed redundant items on nav bar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,11 @@
 <body>
 
   <h1>Home</h1>
- 
+ <form action="" method="get">
+	<label for="searchQuery">Search item:</label>
+	<input type="text" id="searchQuery" name="searchQuery" placeholder="Search PricifyInspect">
+	<button type="submit">Search</button>
+</form>
 </body>
 
 </html>
