Started Wish List
- Added wish list button to nav bar
- created wishlist.html
- created createNewList.html
- created submit-list.php (incomplete)
- added to style.css for wishlist classes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,9 @@
     <a href="index.html">Home</a>
     <a href="login.html">Login</a>
     <a href="register.html">Register</a>
+	<div class="topnav-right">
+		<a href="wishlist.html">Wishlist</a>
+	</div>
   </div>
 <body>
 
