--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,6 +7,9 @@
   <div class="topnav">
     <a href="index.html">Home</a>
     <a href="register.html">Register</a>
+	<div class="topnav-right">
+		<a href="wishlist.html">Wishlist</a>
+	</div>
   </div>
 <div class="log-form">
   <div id='exist'></div>
