--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,6 +7,9 @@
   <div class="topnav">
     <a href="index.html">Home</a>
     <a href="login.html">Login</a>
+	<div class="topnav-right">
+		<a href="wishlist.html">Wishlist</a>
+	</div>
   </div>
   <div id='exist'></div>
 <div class="reg-form">
