--- a/frontend/register.html
+++ b/frontend/register.html
@@ -8,6 +8,7 @@
     <a href="index.html">Home</a>
     <a href="login.html">Login</a>
 	<div class="topnav-right">
+		<a href="notification.html">Notifications</a>
 		<a href="wishlist.html">Wishlist</a>
 	</div>
   </div>
