--- a/frontend/wishlist.html
+++ b/frontend/wishlist.html
@@ -9,6 +9,7 @@
     <a href="login.html">Login</a>
     <a href="register.html">Register</a>
 	<div class="topnav-right">
+		<a href="notification.html">Notifications</a>
 		<a href="wishlist.html">Wishlist</a>
 	</div>
   </div>
