--- a/frontend/reviews.html
+++ b/frontend/reviews.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wishlist</title>
+    <title>Home</title>
   </head>
   <link rel="stylesheet" href="style.css">
   <div class="topnav">
@@ -16,8 +16,10 @@
   </div>
 <body>
 
-  <h1>Wish Lists</h1>
+  <h1>Reviews</h1>
 
-	<a href="createNewList.html" class="create-list-button">Create New List</a>
+		<a href="createNewReview.html" class="create-list-button">Create New Review</a>
+
+</body>
 
 </html>
