--- a/frontend/notification.html
+++ b/frontend/notification.html
@@ -11,6 +11,7 @@
       <a href="register.html">Register</a>
       <div class="topnav-right">
 		<a href="notification.html">Notifications</a>
+		<a href="reviews.html">Reviews</a>
         <a href="wishlist.html">Wishlist</a>
       </div>
     </div>
