--- a/frontend/register.html
+++ b/frontend/register.html
@@ -9,6 +9,7 @@
     <a href="login.html">Login</a>
 	<div class="topnav-right">
 		<a href="notification.html">Notifications</a>
+		<a href="reviews.html">Reviews</a>
 		<a href="wishlist.html">Wishlist</a>
 	</div>
   </div>
