--- a/frontend/wishlist.html
+++ b/frontend/wishlist.html
@@ -12,6 +12,7 @@
 		<a href="notification.html">Notifications</a>
 		<a href="reviews.html">Reviews</a>
 		<a href="wishlist.html">Wishlist</a>
+		<a href="compare.html">Compare</a>
 	</div>
   </div>
 <body>
